# gigi

./: .gitignore  .gitmodules  CMakeLists.txt  README  experiment.scm
experiments/: cps.scm  expand-demo.rkt  expand.rkt
lib/gigi/: core.sld  expander.sld  expander.test.scm
lib/gigi/core/: functional.scm
lib/gigi/expander/: bindings.sld  context.sld  core.sld  scopes+binding-tables.sld  scopes+binding-tables.test.scm  scopes+bindings.sld  scopes+bindings.test.scm  syntax.sld
src/: main.c
src/bootstrap/: eval.c  native.c  printer.c  reader.c  repl.c  scheme.c  scheme.h
